# Cuda-mandlebrot

./: CMakeLists.txt  README.md  cli.cpp  cli.hpp  complex.hpp  data.hpp  grid.cpp  grid.hpp  main.cpp  mandle.cu  mandle.cuh  output.cpp  output.hpp
